# direct

./: .bazeliskrc  .bazelrc  .bazelrc.local.example  .coveragerc  .deepsource.toml  .gitignore  .pre-commit-config.yaml  .prospector.yml  .readthedocs.yml  .ruff.toml  .travis.yml  BUILD.bazel  CITATION.cff  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  LICENSE  MANIFEST.in  MODULE.bazel  Makefile  README.md  README.rst  URL Path.ipynb  authors.md  authors.rst  codecov.yml  contributing.md  contributing.rst  getting_started.md  getting_started.rst  history.md  install.md  installation.rst  model_zoo.md  package.json  paper.bib  paper.md  pnpm-lock.yaml  prettier.config.cjs  pyproject.toml  requirements.in  (+7 more)
direct/: BUILD.bazel  __init__.py  checkpointer.py  constants.py  engine.py  environment.py  exceptions.py  inference.py  launch.py  predict.py  train.py  types.py
direct/algorithms/: __init__.py  mri.py  mri_algorithms.py  optimization.py
direct/cli/: __init__.py  cli.py  predict.py  train.py  upload.py  utils.py
direct/common/: __init__.py  _gaussian.pyx  _poisson.pyx  subsample.py  subsample_config.py
direct/common/calgary_campinas_masks/: R10_218x170.npy  R10_218x174.npy  R10_218x180.npy  R5_218x170.npy  R5_218x174.npy  R5_218x180.npy
direct/common/tests/: test_subsample.py
direct/config/: __init__.py  defaults.py
direct/data/: __init__.py  bbox.py  datasets.py  datasets_config.py  fake.py  generator.py  h5_data.py  lr_scheduler.py  mri_transforms.py  sampler.py  samplers.py  sens.py  transforms.py
direct/data/tests/: test_fake.py  test_generator.py  test_sampler.py  test_transforms.py
direct/functionals/: __init__.py  challenges.py  grad.py  hfen.py  nmae.py  nmse.py  psnr.py  regularizer.py  smooth.py  snr.py  ssim.py
direct/functionals/tests/: test_ssim.py
direct/nn/: build_nn_model.py  get_nn_model_config.py  mri_models.py  types.py  utils.py
direct/nn/adaptive/: binarizer.py  config.py  parameterized.py  policy.py  sampler.py  types.py  utils.py
direct/nn/cirim/: cirim.py  cirim_engine.py  config.py
direct/nn/conjgradnet/: config.py  conjgrad.py  conjgradnet.py  conjgradnet_engine.py
direct/nn/conv/: conv.py  modulated_conv.py
direct/nn/crossdomain/: crossdomain.py  multicoil.py
direct/nn/didn/: didn.py
direct/nn/inception/: inception.py
direct/nn/iterdualnet/: config.py  iterdualnet.py  iterdualnet_engine.py
direct/nn/jointicnet/: config.py  jointicnet.py  jointicnet_engine.py
direct/nn/kikinet/: config.py  kikinet.py  kikinet_engine.py
direct/nn/lpd/: config.py  lpd.py  lpd_engine.py
direct/nn/medl/: __init__.py  config.py  medl.py  medl_engine.py
direct/nn/mobilenet/: config.py  mobilenet.py
direct/nn/multidomainnet/: __init__.py  config.py  multidomain.py  multidomainnet.py  multidomainnet_engine.py
direct/nn/mwcnn/: common.py  mwcnn.py
direct/nn/openvino/: openvino_model.py
direct/nn/rim/: rim.py  (+3 more)
direct/registration/: __init__.py  demons.py  elastic_deformation.py  optical_flow.py  registration.py  simpleitk_utils.py  warp.py
direct/ssl/: __init__.py  _gaussian_fill.pyx  mask_fillers.py  ssl.py
direct/tests/: test_checkpointer.py
direct/utils/: __init__.py  asserts.py  bbox.py  collate.py  communication.py  dataset.py  events.py  imports.py  io.py  logging.py  models.py  mri.py  writers.py
projects/: BUILD.bazel  predict_val.py
projects/CMRxRecon/: README.rst
projects/JSSL/: README.rst
projects/calgary_campinas/: BUILD.bazel  README.md  README.rst  compute_masks.py  compute_metrics.py  predict.py  predict_test.py  predict_val.py
projects/cvpr2022_recurrentvarnet/: README.rst
projects/deepmrireconstruction_radialsubsampling/: compute_metrics.py  plot.py  predict_test.py  predict_val.py
projects/fastmri/: base.yaml  train.lst  val.lst
projects/fastmri2020/: explore_data.py
projects/spie2022_radial_subsampling/: BAZEL.build  README.rst  compute_metrics.py  plot_zoomed.py
projects/spie_radial_subsampling/: README.rst  compute_metrics.py  plot_zoomed.py  predict_test.py  predict_val.py
projects/toy/: base.yaml
projects/vSHARP/: README.rst
tests/: BUILD.bazel  checkpointer_test.py  test_checkpointer.py  test_train.py  train_test.py
tests/test_cli/: BUILD.bazel  test_utils.py  utils_test.py
tests/tests_common/: BUILD.bazel  subsample_test.py  test_subsample.py
tests/tests_data/: BUILD.bazel  algorithms_test.py  datasets_test.py  fake_test.py  lr_scheduler_test.py  mri_transforms_test.py  samplers_test.py  sens_test.py  test_algorithms.py  test_datasets.py  test_fake.py  test_lr_scheduler.py  test_mri_transforms.py  test_sampler.py  test_samplers.py  test_sens.py  test_transforms.py  transforms_test.py
tests/tests_functionals/: BUILD.bazel  __init__.py  gradloss_test.py  hfen_test.py  nmae_test.py  nmse_test.py  psnr_test.py  snr_test.py  ssim_test.py  test_gradloss.py  test_hfen.py  test_nmae.py  test_nmse.py  test_psnr.py  test_snr.py  test_ssim.py
tests/tests_nn/: BUILD.bazel  cirim_engine_test.py  cirim_test.py  conjgradnet_engine_test.py  conjgradnet_test.py  conv_test.py  didn_test.py  iterdualnet_engine_test.py  iterdualnet_test.py  jointicnet_engine_test.py  jointicnet_test.py  kikinet_engine_test.py  kikinet_test.py  lpd_engine_test.py  mri_models_test.py  multidomainnet_engine_test.py  multidomainnet_test.py  mwcnn_test.py  recurrent_test.py  recurrentvarnet_engine_test.py  recurrentvarnet_test.py  resnet_test.py  rim_engine_test.py  rim_test.py  test_cirim.py  test_cirim_engine.py  test_conjgradnet.py  test_conjgradnet_engine.py  test_conv.py  test_didn.py  test_iterdualnet.py  test_iterdualnet_engine.py  test_jointicnet.py  test_jointicnet_engine.py  test_kikinet.py  test_kikinet_engine.py  test_lpd.py  test_lpd_engine.py  test_mri_models.py  test_multidomainnet.py  (+36 more)
tests/tests_ssl/: BUILD.bazel  ssl_test.py  test_ssl.py  test_unet_engine.py  test_varnet_engine.py  test_vsharp_engine.py  unet_engine_test.py  varnet_engine_test.py  vsharp_engine_test.py
tests/tests_utils/: BUILD.bazel  imports_test.py  io_test.py  test_imports.py  test_io.py  test_utils.py  utils_test.py
(+318 files in other folders)
