load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library")
load("@direct_pip//:requirements.bzl", "requirement")
load("@rules_cc//cc:defs.bzl", "cc_library")
load("//tools:cython_rules.bzl", "pyx_library")

cc_library(
    name = "numpy_headers",
    hdrs = [
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/__multiarray_api.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/__ufunc_api.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/_dtype_api.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/_neighborhood_iterator_imp.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/_numpyconfig.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/arrayobject.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/arrayscalars.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/experimental_dtype_api.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/halffloat.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/ndarrayobject.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/ndarraytypes.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/noprefix.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/npy_1_7_deprecated_api.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/npy_3kcompat.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/npy_common.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/npy_cpu.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/npy_endian.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/npy_interrupt.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/npy_math.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/npy_no_deprecated_api.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/npy_os.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/numpyconfig.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/old_defines.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/random/bitgen.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/random/distributions.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/random/libdivide.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/ufuncobject.h",
        "@@rules_python~~pip~direct_pip_311_numpy//:site-packages/numpy/core/include/numpy/utils.h",
    ],
    strip_include_prefix = "/site-packages/numpy/core/include",
    visibility = ["//visibility:private"],
)

pyx_library(
    name = "_poisson",
    srcs = ["common/_poisson.pyx"],
    cc_deps = [":numpy_headers"],
    copts = ["-DNPY_NO_DEPRECATED_API=NPY_1_7_API_VERSION"],
)

pyx_library(
    name = "_gaussian",
    srcs = ["common/_gaussian.pyx"],
    cc_deps = [":numpy_headers"],
    copts = ["-DNPY_NO_DEPRECATED_API=NPY_1_7_API_VERSION"],
)

pyx_library(
    name = "_gaussian_fill",
    srcs = ["ssl/_gaussian_fill.pyx"],
    cc_deps = [":numpy_headers"],
    copts = ["-DNPY_NO_DEPRECATED_API=NPY_1_7_API_VERSION"],
)

py_library(
    name = "algorithms",
    srcs = glob(["algorithms/**/*.py"]),
    deps = [
        requirement("torch"),
        requirement("numpy"),
    ],
)

py_library(
    name = "common",
    srcs = glob(["common/**/*.py"]),
    deps = [
        ":_gaussian",
        ":_poisson",
        requirement("scipy"),
    ],
)

py_library(
    name = "config",
    srcs = glob(["config/**/*.py"]),
    deps = [requirement("omegaconf")],
)

py_library(
    name = "data",
    srcs = glob(["data/**/*.py"]),
    deps = [
        requirement("h5py"),
        requirement("joblib"),
        requirement("threadpoolctl"),
        requirement("scikit-learn"),
        requirement("ismrmrd"),
    ],
)

py_library(
    name = "functionals",
    srcs = glob(["functionals/**/*.py"]),
    deps = [
        requirement("lazy_loader"),
        requirement("scikit-image"),
    ],
)

py_library(
    name = "nn",
    srcs = glob(["nn/**/*.py"]),
    deps = [requirement("einops")],
)

py_library(
    name = "ssl",
    srcs = glob(["ssl/**/*.py"]),
    deps = [
        ":_gaussian_fill",
        requirement("numpy"),
        requirement("torch"),
    ],
)

py_library(
    name = "utils",
    srcs = glob(["utils/**/*.py"]),
    deps = [
        requirement("tqdm"),
        requirement("tensorboard"),
    ],
)

py_library(
    name = "direct_lib",
    srcs = glob(["**/*.py"]),
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        ":algorithms",
        ":common",
        ":config",
        ":data",
        ":functionals",
        ":nn",
        ":ssl",
        ":utils",
        requirement("numpy"),
        requirement("torch"),
        requirement("torchvision"),
        requirement("omegaconf"),
    ],
)

py_binary(
    name = "direct",
    srcs = glob([
        "cli/**/*.py",
    ]),
    data = [
        "//projects:all_configs",
    ],
    main = "cli/cli.py",
    deps = [
        ":direct_lib",
    ],
)
